--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="css/generic/reset.css">
 
     <!-- Components stylesheet -->
-    <link rel="stylesheet" href="css/components/attribution.css">
     <link rel="stylesheet" href="css/components/model-viewer.css">
+    <link rel="stylesheet" href="css/components/attribution.css">
+    <link rel="stylesheet" href="css/components/text-wrapper.css">
     <link rel="stylesheet" href="css/components/logo.css">
 
     <!-- Containers stylesheet -->
@@ -56,15 +57,14 @@
     >
     </model-viewer>
 
-    <section class="attribution">
-      <span>
+    <div class="info-container">
+      <img src="images/logo2.jpeg" class="iconDetails">
+
+      <div class="text-wrapper">
         <h1>Demonstração planta baixa</h1>
-        <span> Model preview by Holotech </span>
-      </span>
-      <!-- <a class="logo-wrapper"> -->
-        <!-- <img class="logo" src="images/logo.png"> -->
-      <!-- </a> -->
-    </section>
+        <span>Model by Holotech</span>
+      </div>
+    </div>
     
   </div>
   
