Fix projects displayed names

--- a/office.html
+++ b/office.html
@@ -70,7 +70,7 @@
 
     <div class="info-container">
       <div class="text-wrapper">
-        <h1>Demonstração empreendimento Dubai</h1>
+        <h1>Demo: Office</h1>
         <span>Model by Holotech</span>
       </div>
       <a href="./index.html">
